--- a/Kiva Classifying Delinquent Loans.ipynb
+++ b/Kiva Classifying Delinquent Loans.ipynb
@@ -23,7 +23,9 @@
       "\n",
       "A delinquent loan is defined as a loan that is late on payment. This includes loans that are default (completely gave up on payment), and loans that are in repayment but are late. To find characteristics related to delinquent loans, I used classification methods to identify influential features that distinuish delinquent loans from non-delinquent loans.\n",
       "\n",
-      "Goal: Classify delinquent loans. Find influential characteristics of delinquent loans."
+      "Goal: Classify delinquent loans. Find influential characteristics of delinquent loans.\n",
+      "\n",
+      "The GitHub Repository for my project is here https://github.com/bellepeng/KivaGitHub"
      ]
     },
     {
@@ -53,6 +55,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "Although this step is reproducible, I highly recommend NOT running this Extraction and Data Prep step in this notebook as it will crash. I suggest going straight to the Modeling step, which uploads the the data of 10000 sampled lines. You can find the sampled data in the GitHub Repository.\n",
+      "\n",
       "This Extraction and Data Prep step only needs to be run once, which generates a cleaned-up .csv file. The rest of my analysis involves reading in the output file from this section, which contains all of the Loans, Lenders, and Loans_Lenders fields of my sampled loans. NOTE: due to the size and complexity of the data, running the code here will take a long time and most likely crash iPython Notebook. I ran the code on the cloud or SCF machine or on my personal laptop, and still required hours of run-time, possibly running out of disk memory (which will require the SCF guys' help). Therefore, if you wisely decide not to run the extraction code in this notebook and go straight to the analysis, I have attached my sampled data so you can use that directly. You will eventually need my sampled data anyways, since drawing a different sample may change the results slightly.\n",
       "\n",
       "The Kiva data comes in three sets: Loans, Lenders, and Loans_Lenders (which is a look up file that connects the Loans data with the Lenders data). There are 1320 .json files in Loans, 1225 .json files in Lenders, and 224 .json files in Loans_Lenders. The purpose of this notebook is to extract *select* data useful for my analysis out of the .json files and combine the 1320 .json files into one single Loans data, so I have all of the data in one place. I looked at all of the available fields in various dictionaries, and selected only the ones of interest to pull out, as shown in the code. Similarly for Lenderes and Loans_Lenders. Included in the code below are also some basic data cleaning, export to .csv, then concatenate all of the .csv in unix. \n",
